--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.3",
+    "mongoose-algolia": "^1.10.1",
+    "mongoose-deep-populate": "^3.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "stripe": "^12.3.0"
   }
 }
